--- a/src/style/chat/chat.scss
+++ b/src/style/chat/chat.scss
@@ -52,6 +52,8 @@
           cursor: pointer;
           position: relative;
           font-size: 1.3em;
+          align-items: center;
+          justify-content: flex-start;
           .chatList_inner_chatRoomLink_img {
             position: relative;
             width: 60px;
@@ -79,31 +81,52 @@
             }
           }
           .chatList_inner_chatRoomLink_contents {
+            width: 200px;
             margin-left: 10px;
             display: flex;
             flex-direction: column;
             justify-content: center;
             text-align: left;
-            div:first-child {
+            overflow: hidden;
+            span{
+              
+              text-overflow: ellipsis;
+              overflow: hidden;
+              white-space: nowrap;
+            }
+            span:first-child {
               font-weight: 600;
             }
-            div:last-child {
+            span:last-child {
               color: #aaa;
             }
           }
           &:hover {
             background-color: #eee;
           }
+          .chatList_inner_pimg{
+            display: block;
+            width: 50px;
+            height: 50px;
+            border-radius: 3px;
+            overflow: hidden;
+            margin-left: auto;
+            margin-right: 0;
+            img{
+              width: 100%;
+              height: 100%;
+            }
+          }
           .notReadCnt {
             position: absolute;
-            right: 20px;
+            right: 70px;
             width: 35px;
             height: 35px;
-
+            top: 50%;
             font-weight: 600;
             text-align: center;
             line-height: 35px;
-            transform: translate(10px, 15px);
+            transform: translate(0,-50%);
             background-color: #f70000;
             border-radius: 50%;
             color: white;
@@ -195,7 +218,7 @@
         flex: 1;
         float:none;
         .pro {
-          border-radius: none;
+          border-radius: none !important;
           display: flex;
           border: none;
           background-color: transparent;
