--- a/src/style/header/headersearch.css
+++ b/src/style/header/headersearch.css
@@ -25,9 +25,11 @@
 .HeaderSearch .Searchpop .searchcontent .titlename .recently {
   border-bottom: 2px solid red;
   color: red;
+  cursor: pointer;
 }
 .HeaderSearch .Searchpop .searchcontent .titlename .popular {
   border-bottom: 2px solid rgb(217, 217, 217);
+  cursor: pointer;
 }
 .HeaderSearch .Searchpop .searchcontent .searchcenter {
   height: 360px;
@@ -35,13 +37,37 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 10px 0;
 }
-.HeaderSearch .Searchpop .searchcontent .searchcenter img {
+.HeaderSearch .Searchpop .searchcontent .searchcenter .nonsearchlist {
   width: 52px !important;
   height: 46px !important;
 }
 .HeaderSearch .Searchpop .searchcontent .searchcenter p {
   margin-top: 20px;
+}
+.HeaderSearch .Searchpop .searchcontent .searchcenter .searchallnew {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+}
+.HeaderSearch .Searchpop .searchcontent .searchcenter .searchallnew .searchesnewlist {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 45px;
+  padding: 0 10px;
+}
+.HeaderSearch .Searchpop .searchcontent .searchcenter .searchallnew .searchesnewlist .searchnewname {
+  cursor: pointer;
+}
+.HeaderSearch .Searchpop .searchcontent .searchcenter .searchallnew .searchesnewlist button {
+  width: 14px;
+}
+.HeaderSearch .Searchpop .searchcontent .searchcenter .searchallnew .searchesnewlist button img {
+  width: 14px;
 }
 .HeaderSearch .Searchpop .searchcontent .titlename2 {
   display: flex;
