--- a/src/style/header/headersearch.scss
+++ b/src/style/header/headersearch.scss
@@ -26,10 +26,12 @@
         .recently {
           border-bottom:2px solid red;
           color:red;
+          cursor: pointer;
         }
 
         .popular {
           border-bottom:2px solid rgb(217,217,217);
+          cursor: pointer;
         }
       }
 
@@ -39,14 +41,43 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        padding: 10px 0;
 
-        img {
+        .nonsearchlist {
           width: 52px !important;
           height: 46px !important;
         }
 
         p {
           margin-top: 20px;
+        }
+
+        .searchallnew {
+          width: 100%;
+          height: 100%;
+          display:flex;
+          justify-content: flex-start;
+          flex-direction: column;
+
+          .searchesnewlist {
+            display:flex;
+            justify-content: space-between;
+            align-items: center;
+            height: 45px;
+            padding: 0 10px;
+
+            .searchnewname {
+              cursor: pointer;
+            }
+
+            button {
+              width: 14px;
+
+              img {
+                width: 14px;
+              }
+            }
+          }
         }
       }
 
