header, category, loginpopup, signup 수정 from yang2
headerjsx 판매하기 경로 로컬스토리지를 이용한 임시저장 기능 경로,
콘솔에러 찍히던 폰트어썸 아이콘들을 리액트 아이콘들로 교체,
p 태그 안에 div 태그 넣어서 나는 에러 수정

2023-12-15

--- a/src/style/header/Category.css
+++ b/src/style/header/Category.css
@@ -23,7 +23,9 @@
 }
 .Category .maincategoryname .categoryname .categoryarrow {
   position: absolute;
+  top: 50%;
   right: 30px;
+  transform: translateY(-50%);
   color: red;
 }
 .Category .maincategoryname .maincategorylist {
@@ -56,7 +58,9 @@
 }
 .Category .middlecategoryname .middlename .categoryarrow {
   position: absolute;
+  top: 50%;
   right: 30px;
+  transform: translateY(-50%);
   color: red;
 }
 .Category .middlecategoryname .middlecategorylist {
