--- a/src/style/popup/loginpopup.scss
+++ b/src/style/popup/loginpopup.scss
@@ -74,7 +74,7 @@
           position: relative;
           margin: 10px 0;
           
-          i {
+          svg {
             position: absolute;
             top:50%;
             left:12px;
@@ -104,7 +104,7 @@
           .loginstate {
             position: relative;
 
-            i {
+            svg {
               position: absolute;
               top:50%;
               left:0;
