--- a/src/style/header/category.scss
+++ b/src/style/header/category.scss
@@ -24,7 +24,9 @@
 
       .categoryarrow {
         position: absolute;
+        top:50%;
         right:30px;
+        transform: translateY(-50%);
         color:red;
       }
     }
@@ -63,7 +65,9 @@
 
       .categoryarrow {
         position: absolute;
+        top:50%;
         right:30px;
+        transform: translateY(-50%);
         color:red;
       }
     }
