--- a/src/style/signup/signup.css
+++ b/src/style/signup/signup.css
@@ -55,20 +55,22 @@
 .signup .signForm .signpass {
   position: relative;
 }
-.signup .signForm .signpass i {
+.signup .signForm .signpass svg {
   position: absolute;
   top: 8px;
   right: 10px;
   cursor: pointer;
+  font-size: 1.3rem;
 }
 .signup .signForm .signpasscheck {
   position: relative;
 }
-.signup .signForm .signpasscheck i {
+.signup .signForm .signpasscheck svg {
   position: absolute;
   top: 8px;
   right: 10px;
   cursor: pointer;
+  font-size: 1.3rem;
 }
 .signup .signForm .signemail input {
   width: 55%;
