header, headerSearch, category, login, logout 등 수정 from yang2
headerjsx, headerSearchjsx 등등 에서 발생하던 p 태그안에 div 태그라든지,
폰트어썸에서 가져와서 나던 에러들을 바로 잡았으며,
이미지 경로문제로 일부 페이지에서 로그아웃 후 로그인컴포넌트 재호출 시
발생하면 이미지 깨짐 현상을 바로잡음

2023-12-18

--- a/src/style/header/headersearch.css
+++ b/src/style/header/headersearch.css
@@ -80,10 +80,16 @@
 .HeaderSearch .Searchpop .searchcontent .titlename2 div {
   padding: 6px;
 }
+.HeaderSearch .Searchpop .searchcontent .titlename2 .recently2 {
+  width: 20%;
+}
 .HeaderSearch .Searchpop .searchcontent .titlename2 span {
   color: red;
   overflow-wrap: break-word;
-  width: 50%;
+  width: 54%;
+}
+.HeaderSearch .Searchpop .searchcontent .titlename2 .popular2 {
+  width: 20%;
 }
 .HeaderSearch .Searchpop .searchcontent .searchcenter2 {
   height: 360px;
@@ -106,7 +112,15 @@
 }
 .HeaderSearch .Searchpop .searchfooter .searchdelete {
   cursor: pointer;
+  display: flex;
+  align-items: center;
+}
+.HeaderSearch .Searchpop .searchfooter .searchdelete svg {
+  padding-right: 6px;
 }
 .HeaderSearch .searchCloseBtn {
   visibility: visible;
+}
+.HeaderSearch .searchiconbtn {
+  height: 100%;
 }/*# sourceMappingURL=headersearch.css.map */
