--- a/src/style/review/review.css
+++ b/src/style/review/review.css
@@ -55,27 +55,28 @@
   display: flex;
   border-bottom: 1px solid rgb(238, 238, 238);
 }
-.reviewList .review li > a {
+.reviewList .review li > .link {
   width: 60px;
   height: 60px;
   border-radius: 50%;
   margin-right: 15px;
   display: block;
   background-color: #f0f0f0;
+  cursor: pointer;
 }
-.reviewList .review li > a span {
+.reviewList .review li > .link span {
   line-height: 60px;
   height: 100%;
   display: block;
 }
-.reviewList .review li > a span img {
+.reviewList .review li > .link span img {
   width: 100%;
   height: 100%;
   border-radius: 50%;
   -o-object-fit: cover;
      object-fit: cover;
 }
-.reviewList .review li > a span svg {
+.reviewList .review li > .link span svg {
   width: 50%;
   height: 100%;
   margin: 0 auto;
@@ -92,6 +93,7 @@
 .reviewList .review li .reviewContent .buyerName .buyer {
   display: flex;
   align-items: center;
+  cursor: pointer;
 }
 .reviewList .review li .reviewContent .buyerName .buyerDate {
   font-size: 13px;
