--- a/src/style/review/review.scss
+++ b/src/style/review/review.scss
@@ -71,13 +71,14 @@
       display: flex;
       border-bottom: 1px solid rgb(238, 238, 238);
 
-      &>a {
+      &>.link {
         width: 60px;
         height: 60px;
         border-radius: 50%;
         margin-right: 15px;
         display: block;
         background-color: #f0f0f0;
+        cursor: pointer;
 
         span {
           line-height: 60px;
@@ -117,6 +118,8 @@
             display: flex;
             -webkit-box-align: center;
             align-items: center;
+            cursor: pointer;
+
           }
 
           .buyerDate {
@@ -130,7 +133,8 @@
           white-space: pre-wrap;
           line-height: 1.5;
         }
-        .report{
+
+        .report {
           color: rgb(136, 136, 136);
           font-size: 13px;
           display: flex;
@@ -138,7 +142,8 @@
           align-items: unset;
           margin-right: 25px;
           position: relative;
-          svg{
+
+          svg {
             position: relative;
             top: 4px;
           }
