--- a/src/App.css
+++ b/src/App.css
@@ -75,3 +75,11 @@ fieldset{
 :root {
   --red: rgb(247, 47, 51); 
 }
+.scoreBox{display: flex;}
+.star{
+  display: block;
+  width: 15px;
+  height: 15px;
+  background: url(http://127.0.0.1:8000/webImg/star.png) 50% 50% no-repeat;
+  background-size: contain;
+}
