--- a/src/style/header/headersearch.scss
+++ b/src/style/header/headersearch.scss
@@ -24,13 +24,24 @@
         }
 
         .recently {
+          border-bottom:2px solid lightgray;
+          color:black;
+          cursor: pointer;
+        }
+        .recently.active {
           border-bottom:2px solid red;
           color:red;
           cursor: pointer;
         }
 
         .popular {
-          border-bottom:2px solid rgb(217,217,217);
+          border-bottom:2px solid lightgray;
+          color:black;
+          cursor: pointer;
+        }
+        .popular.active {
+          border-bottom:2px solid red;
+          color:red;
           cursor: pointer;
         }
       }
@@ -76,6 +87,29 @@
               img {
                 width: 14px;
               }
+            }
+          }
+        }
+
+        .searchpopular {
+          width: 100%;
+          height: 100%;
+          display:flex;
+          justify-content: flex-start;
+          flex-direction: column;
+
+          .searchpopularlist {
+            display:flex;
+            justify-content:flex-start;
+            align-items: center;
+            height: 45px;
+            padding: 0 10px;
+            cursor: pointer;
+
+            span {
+              color:red;
+              width: 10%;
+              padding-right: 10px;
             }
           }
         }
