--- a/src/style/signup/signup.css
+++ b/src/style/signup/signup.css
@@ -106,6 +106,17 @@
 .signup .signForm .signphone .signphonecheckbox p:nth-of-type(2) {
   padding-left: 20px;
 }
+.signup .signForm .recaptchawrap {
+  margin-bottom: 0;
+}
+.signup .signForm .recaptchawrap .recaptcha {
+  margin-left: 46px;
+  margin-bottom: 0;
+  padding: 30px 0;
+}
+.signup .signForm .recaptchawrap .recaptcha div {
+  margin-bottom: 0;
+}
 .signup .signForm .signcheckbar {
   width: 100%;
   margin: 0 auto;
