--- a/src/style/searchproduct/searchproduct.css
+++ b/src/style/searchproduct/searchproduct.css
@@ -46,16 +46,46 @@
 }
 .searchProduct .searchproductmain .searchproductcontent {
   display: flex;
-  justify-content: first baseline;
+  justify-content: flex-start;
   flex-wrap: wrap;
+  box-sizing: border-box;
+  width: 100%;
+  margin: 0 auto;
 }
 .searchProduct .searchproductmain .searchproductcontent li {
+  margin: 0 1%;
+  margin-bottom: 14px;
+  width: 18%;
   border: 1px solid #ddd;
-  padding: 10px;
+  box-sizing: border-box;
 }
-.searchProduct .searchproductmain .searchproductcontent li .searchlistlink .searchlistinfo {
+.searchProduct .searchproductmain .searchproductcontent li .searchlistlink .searchlistinfowrap {
+  padding: 6px;
+}
+.searchProduct .searchproductmain .searchproductcontent li .searchlistlink .searchlistinfowrap .searchlistinfo {
+  padding-top: 6px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+}
+.searchProduct .searchproductmain .searchproductcontent li .searchlistlink .searchlistinfowrap .searchlistinfo .searchlistregdate {
+  color: #888;
+  font-size: 0.9rem;
+}
+.searchProduct .searchproductmain .searchproductnonewrap {
+  text-align: center;
+  padding: 40px 0;
+}
+.searchProduct .searchproductmain .searchproductnonewrap .searchproductnone .searchproductnonename {
+  color: red;
+  font-weight: bold;
+  font-size: 1.3rem;
+}
+.searchProduct .searchproductmain .searchproductnonewrap .searchproductnone .searchproductnoneguide {
+  font-weight: bold;
+  font-size: 0.9rem;
+  padding: 30px 0;
+  border-bottom: 1px solid #ddd;
 }
 .searchProduct .searchpage .searchpagenation {
   display: flex;
@@ -65,4 +95,5 @@
   padding: 6px 12px;
   margin: 0 10px;
   border: 1px solid #000;
+  cursor: pointer;
 }/*# sourceMappingURL=searchproduct.css.map */
