--- a/src/style/searchproduct/searchproduct.scss
+++ b/src/style/searchproduct/searchproduct.scss
@@ -55,19 +55,58 @@
     
     .searchproductcontent {
       display:flex;
-      justify-content:first baseline;
+      justify-content:flex-start;
       flex-wrap: wrap;
+      box-sizing: border-box;
+      width: 100%;
+      margin:0 auto;
 
       li {
+        margin: 0 1%;
+        margin-bottom: 14px;
+        width: 18%;
         border:1px solid #ddd;
-        padding: 10px;
+        box-sizing: border-box;
 
         .searchlistlink {
 
-          .searchlistinfo {
-            display:flex;
-            justify-content: space-between;
+          .searchlistinfowrap {
+            padding: 6px;
+
+            .searchlistinfo {
+              padding-top: 6px;
+              display:flex;
+              justify-content: space-between;
+              align-items: center;
+
+              .searchlistregdate {
+                color:#888;
+                font-size: 0.9rem;
+              }
+            }
           }
+          
+        }
+      }
+    }
+
+    .searchproductnonewrap {
+      text-align: center;
+      padding: 40px 0;
+
+      .searchproductnone {
+
+        .searchproductnonename {
+          color:red;
+          font-weight: bold;
+          font-size: 1.3rem;
+        }
+
+        .searchproductnoneguide {
+          font-weight: bold;
+          font-size: 0.9rem;
+          padding: 30px 0;
+          border-bottom: 1px solid #ddd;
         }
       }
     }
@@ -85,7 +124,7 @@
         padding: 6px 12px;
         margin: 0 10px;
         border:1px solid #000;
-
+        cursor: pointer;
       }
     }
   }
