--- a/src/style/signup/signup.scss
+++ b/src/style/signup/signup.scss
@@ -134,6 +134,21 @@
       }
     }
 
+    .recaptchawrap {
+      // border:1px solid red;
+      margin-bottom: 0;
+
+      .recaptcha {
+        margin-left: 46px;
+        margin-bottom: 0;
+        padding: 30px 0;
+
+        div {
+          margin-bottom: 0;
+        }
+      }
+    }
+
     .signcheckbar {
       width: 100%;
       margin:0 auto;
