--- a/src/style/Product/product.css
+++ b/src/style/Product/product.css
@@ -60,30 +60,42 @@
   transition: filter 0.3s ease
 }
 
-.more_button{
-  padding: 0;
-  background-color: rgb(247, 0, 0);
-  border-radius: 5px;
-  font-size: 1.1rem;
-  margin: 20px auto;
-  color: white;
-  width: 80px;
-  height: 30px;
-}
+  .more_button {
+    background-color:#f9f9f9;
+    border-radius:20px;
+    display:inline-block;
+    cursor:pointer;
+    color:#999;
+    margin: 20px;
+    font-size: .8rem;
+    padding:7px 16px;
+  }
+  .more_button:hover {
+    background-color:#e9e9e9;
+  }
+  .more_button:active {
+    position:relative;
+    top:1px;
+  }
+  
 
-.pro.sellClass {
-  filter: brightness(70%);
-}
 
-.pro_status {
-  font-size: 14px;
-  color: red;
-  font-weight: bold;
-}
+
+  
+  .pro_status {
+    font-size: 14px;
+    color: #ccc;
+    font-weight: bold;
+  }
+  
+  .sellClass img {
+    filter: brightness(30%);
+  }
 
 .sell{
+  z-index: 100;
   position: absolute;
-  border: 3.5px solid  red;
+  border: 3.5px solid #ccc;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
