product, profile 페이지 수정 from Lee

--- a/src/style/profile/profileHearder.css
+++ b/src/style/profile/profileHearder.css
@@ -126,3 +126,9 @@
   border-radius: 5px;
   padding: 5px;
 }
+
+.scoreBox{
+  margin: 5px 10px 10px 10px ;
+  text-align: center;
+  justify-content: center;
+}
