--- a/src/style/profile/profilenav.css
+++ b/src/style/profile/profilenav.css
@@ -15,6 +15,7 @@
   border-bottom: 0.5px solid black;
   font-size: 0.8rem;
   color: #ccc;
+  cursor: pointer;
 }
 
 .profile_nav.active {
@@ -24,4 +25,25 @@
   border-left: 0.5px solid black;
   border-bottom: none;
   transition: 0.1s ease;
+}
+
+.profile_navf.active {
+  color: black;
+  border-right: 0.5px solid black;
+  border-top: 0.5px solid black;
+  border-left: 0.5px solid black;
+  border-bottom: none;
+  transition: 0.1s ease;
+}
+
+.profile_navf{
+  width: 24.8%;
+  height: 100%;
+  border-right: 0.5px solid #ccc;
+  border-top: 0.5px solid #ccc;
+  border-left: 0.5px solid #ccc;
+  border-bottom: 0.5px solid black;
+  font-size: 0.8rem;
+  color: #ccc;
+  cursor: pointer;
 }
