--- a/src/App.css
+++ b/src/App.css
@@ -83,3 +83,47 @@ fieldset{
   background: url(http://127.0.0.1:8000/webImg/star.png) 50% 50% no-repeat;
   background-size: contain;
 }
+body .loginpopup .loginwrap .loginContent .logintitle {
+  width: 180px;
+  height: 84px;
+  margin: 0px auto 0;
+  padding: 32px 0 0;
+}
+body .loginpopup .loginwrap .loginContent .logintitle img {
+  width: 100%;
+  height: 90%;
+  object-fit: contain;
+}
+body .loginpopup .loginwrap .loginContent .loginForm p input {
+  width: 100%;
+  padding: 9px 30px;
+  padding-left: 36px;
+  caret-color: orange;
+  font-size: 15px;
+  border: 1px solid rgb(165, 165, 165);
+  border-radius: 4px;
+}
+body .loginpopup .loginwrap .closeBtn img {
+  width: 20px;
+  height: 20px;
+}
+body .loginpopup .loginwrap .loginContent .loginForm .loginSignBtns button {
+  border-radius: 12px;
+  font-size: 1rem;
+  width: 46%;
+  padding: 10px 0;
+}
+body .loginpopup .loginwrap .loginContent .loginForm .loginSignBtns {
+  display: flex;
+}
+body .loginpopup .loginwrap .loginContent .loginForm .loginContent .ipsecurity{
+  font-size: 12px;
+}
+body .loginpopup .loginwrap .loginContent .loginForm .loginContent .ipsecurity .ipBtn {
+  width: 36px;
+
+}
+body .loginpopup .loginwrap .loginContent .loginForm .loginContent .ipsecurity .ipBtn div {
+  width: 17px;
+
+}
