--- a/src/style/profile/profileHearder.css
+++ b/src/style/profile/profileHearder.css
@@ -127,7 +127,7 @@
   padding: 5px;
 }
 
-.scoreBox{
+.pro_header .scoreBox{
   margin: 5px 10px 10px 10px ;
   text-align: center;
   justify-content: center;
